--- a/final/styles/index-small.css
+++ b/final/styles/index-small.css
@@ -58,6 +58,7 @@
         margin: 0;
         padding: 0;
         width: 100%;
+        background: var(--chess-black);
     }
 
     .bg-image {
